Rename new components header, list-group-horizontal

--- a/listings-product/explore-when.html
+++ b/listings-product/explore-when.html
@@ -3502,7 +3502,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3532,7 +3532,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3576,7 +3576,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3606,7 +3606,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3650,7 +3650,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3680,7 +3680,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3724,7 +3724,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3754,7 +3754,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3798,7 +3798,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3828,7 +3828,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3872,7 +3872,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3902,7 +3902,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -3946,7 +3946,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -3976,7 +3976,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -4020,7 +4020,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -4050,7 +4050,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -4094,7 +4094,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -4124,7 +4124,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -4168,7 +4168,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -4198,7 +4198,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -4242,7 +4242,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -4272,7 +4272,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
@@ -4316,7 +4316,7 @@
                                                                         type="button"
                                                                       >
                                                                         <div
-                                                                          class="_szq06b"
+                                                                          class="header__flexible-month"
                                                                         >
                                                                           <div
                                                                             class="_dkfadk"
@@ -4346,7 +4346,7 @@
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><div
-                                                                            class="_szq06b"
+                                                                            class="header__flexible-month"
                                                                           >
                                                                             <div
                                                                               class="_dkfadk"
